<resources>
    <string name="app_name">LyricGo</string>
    <string name="title_activity_maps">Map</string>
    <string name="collected_lyric">Lyric Collected!</string>
    <string name="too_far_away">That Lyric is too far away. Move closer to collect it!</string>
    <string name="song_info_filename">SongInfo.txt</string>
    <string name="collect">Collect</string>
    <string name="current">Current</string>
    <string name="country">Country</string>
    <string name="films">Films</string>
    <string name="hip_hop">HipHop</string>
    <string name="rock">Rock</string>
    <string name="theatre">Theatre</string>
    <string name="classic">Classic</string>
    <string name="mode">Mode</string>
    <string name="song_name">Song Name</string>
    <string name="lyrics">Lyrics</string>
    <string name="shop">Shop</string>
    <string name="songs_found">All Songs Found</string>
    <string name="change_mode">Change Mode</string>
    <string name="current_song">Current Song</string>
    <string name="guess">Guess</string>
    <string name="guesses_left">Guesses Left:</string>
    <string name="shared_pref">MySharedPreferences</string>
    <string name="congratulations">Congratulations!</string>
    <string name="correct_guess">You guessed correctly! You will now gain 1 point and 5 coins.</string>
    <string name="great">Great</string>
    <string name="songs_found_filename">SongsFound.txt</string>
    <string name="has_song_been_found">Has song been found</string>
    <string name="whoops">Whoops</string>
    <string name="incorrect">Incorrect</string>
    <string name="incorrect_guess">That guess was not quite right. You lost one of your guesses.</string>
    <string name="out_of_guesses">That was your last guess! You will now move on to the next song.</string>
    <string name="score_title">Score:</string>
    <string name="songs_found_title">Songs Found</string>
    <string name="skip_song">Skip Song</string>
    <string name="song_skipped">Song Skipped.</string>
    <string name="cost">Cost:</string>
    <string name="song_packs">Song Packs</string>
    <string name="coins">Coins</string>
    <string name="coins_title">Coins:</string>
    <string name="not_enough_coins">You do not have enough coins to buy that pack.</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="sure_message">Are you sure you wish to buy the pack:</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="purchase_made">Purchase complete</string>
    <string name="already_owned">You already own this pack.</string>
    <string name="achievements">Achievements</string>
    <string name="achievements_total">Achievements :</string>
    <string name="score">Score</string>
    <string name="achievements_filename">Achievements.txt</string>
    <string name="song_wizz">Song Wizz </string>
    <string name="lyric_score">Lyric Score</string>
    <string name="lyric_wizz">Lyric Wizz</string>
    <string name="achievement_unlocked_title">Achievement Unlocked!</string>
    <string name="achievement_unlocked">You unlocked the achievement: </string>
    <string name="home">Home</string>
    <string name="song_artist_hint">Song Name - Artist Name</string>
</resources>
